# pitwall-desktop

./: .gitignore  LICENSE  README.md  index.html  overlay.html  package-lock.json  package.json  setup.ps1  typedoc.json  vite.config.ts
.github/workflows/: ci.yml
docs/: ANALYSIS.md  API.md  ARCHITECTURE.md  AUDIO_COACH.md  COMPARISON.md  CONTRIBUTING.md  DATA_MODEL.md  DESIGN_NOTES.md  FEATURES.md  FRONTEND.md  LIVE_TELEMETRY.md  NATIVE_VR.md  README.md  SETUP.md  TROUBLESHOOTING.md  VR_NATIVE_SPIKE.md
openxr-layer/: CMakeLists.txt  README.md  pitwall-openxr-layer.def
openxr-layer/include/: pitwall_vr_shm.h
openxr-layer/src/: hud_renderer.cpp  hud_renderer.h  layer.cpp  shm_reader.h
scripts/: audio-phrases.txt  build-api-docs.ps1  generate-audio-clips.ps1
src/: App.css  App.tsx  overlay.css  overlay.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: overlay.json
src-tauri/examples/: import_bench.rs
src-tauri/resources/audio/coach/default/: manifest.json
src-tauri/resources/openxr-layer/: README.md  pitwall_openxr_layer.json
src-tauri/src/: hotkey.rs  lib.rs  main.rs
src-tauri/src/analysis/: coach.rs  fuel_tire.rs  lap_kind.rs  lap_segmenter.rs  lap_validity.rs  mod.rs  pipeline.rs  sector_splitter.rs  trace_coach.rs  types.rs
src-tauri/src/audio/: clip_phrases.rs  coach.rs  manifest.rs  mod.rs  phrasing.rs  player.rs  queue.rs  session_mode.rs  speech.rs  tts_winrt.rs
src-tauri/src/coach/: llm.rs  mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/ingest/: config_check.rs  frame.rs  frame_extractor.rs  ibt_importer.rs  import_runner.rs  mod.rs  watcher.rs
src-tauri/src/live/: car_idx_frame.rs  competitors.rs  mod.rs  pack.rs  snapshot.rs  tracker.rs
src-tauri/src/overlay/: desktop.rs  mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/storage/: db.rs  models.rs
src-tauri/src/vr/: hud_server.rs  layer_install.rs  mod.rs  shm.rs
src/components/: CoachPanel.tsx  ConfigBanner.tsx  FuelTirePanel.tsx  LapCompareChart.tsx  LapTable.tsx  LivePanel.tsx  OverlayView.tsx  SessionBrowser.tsx  SessionLeaderboard.tsx  SessionStandingsPanel.tsx  SettingsPage.tsx
src/components/live/: LiveMetricsGrid.tsx  LiveProximityPanel.tsx  LiveTrafficPanel.tsx
src/components/settings/: AiOverlaySections.tsx  AudioAdvancedSections.tsx  SettingsFields.tsx
src/lib/: api.ts  types.ts  useSettings.ts
src/widgets/: CoachWidget.tsx  RadarWidget.tsx  RelativeWidget.tsx  StandingsWidget.tsx  format.ts  index.tsx  widgets.css
