[package]
name = "pitwall-desktop"
version = "0.1.0"
description = "Post-session iRacing telemetry analysis"
authors = ["jrkon"]
edition = "2021"

[lib]
name = "pitwall_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "gen-audio-clips"
path = "src/bin/gen_audio_clips.rs"

[features]
default = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
pitwall = { version = "0.1", features = ["derive"] }
rayon = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
notify = "8"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rodio = { version = "0.19", default-features = false, features = ["wav"] }
hound = "3.5"
reqwest = { version = "0.13.4", features = ["json"] }
tokio-util = { version = "0.7", features = ["rt"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_Security",
    "Foundation",
    "Foundation_Collections",
    "Media_SpeechSynthesis",
    "Storage_Streams",
] }
